# px4_vision_autonomy

./: package.xml  setup.py
launch/: mission_inspection.launch.py  perception_only.launch.py  sim_x500_vision.launch.py
px4_vision_autonomy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
px4_vision_autonomy/nodes/: aruco_detector.py  camera_viewer.py  mavsdk_bridge.py  mission_commander.py  vision_controller.py
scripts/tools/: generate_aruco_marker.py
tests/unit/: test_aruco_detection.py
worlds/: inspection.sdf
